fixed CTA spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -175,7 +175,7 @@ header .header-menu li > a:hover {
     padding: 50px 100px;
     max-width: 65%;
     margin: 0 auto;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 }
 
 .action > .container {
@@ -630,7 +630,8 @@ footer p {
     .action > .container {
         flex-direction: column;
         align-items: center;
-        gap: 40px;
+        gap: 5px;
+        text-align: center;
     }
 
     /* CONTACT */
